fix: resolved article overflow

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -2,6 +2,11 @@
 
 article{
 	@apply space-y-24;
+	width: 100%;
+
+	*{
+		width: 100%;
+	}
 
 	h1,h2,h3,h4,h5,h6{
 		/* margin-bottom: 24px; */
